# moevis-blog

./: .gitignore  Cargo.toml  site_config.yml
pages/: about.md
posts/: first_post.md
src/: admin_router.rs  context.rs  main.rs  page.rs  post.rs  siteconfig.rs  util.rs
static/css/: base.css
static/js/: highlight.js
templates/: base.html.tera  index.html.tera  login.html.tera  pages.html.tera  posts.html.tera
templates/error/: not_found.html.tera
