[package]
name = "api-moevis-cc"
version = "0.1.0"
authors = ["moevis <moevery@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
comrak = "*"
config = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
version = "*"
default-feature = false
features = ["tera_templates"]